--- a/bolg-registry-center/src/main/resources/bootstrap.yml
+++ b/bolg-registry-center/src/main/resources/bootstrap.yml
@@ -11,10 +11,5 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://admin:admin@10.1.40.116:8761/eureka/
-security:
-  basic:
-    enabled: true
-  user:
-    name: admin
-    password: admin
+      defaultZone: http://127.0.0.1:8761/eureka/
+
