--- a/bolg-registry-center/src/main/resources/application.yml
+++ b/bolg-registry-center/src/main/resources/application.yml
@@ -1,10 +1,39 @@
-#监控相关配置  
-management:
-  security:
-    enabled: false
-info:
-  app:
-    name: "@project.name@" #从pom.xml中获取
-    description: "@project.description@"
-    version: "@project.version@"
-    spring-boot-version: "@project.parent.version@"
+spring:
+  application:
+    name: bolg-registry-center
+  cloud:
+    inetutils:
+      preferred-networks:
+        - 10.0
+---
+spring:
+  profiles: peer1
+server:
+  port: 8761
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    serviceUrl:
+      defaultZone: http://peer2:8762/eureka/
+  server:
+    enable-self-preservation: false
+    wait-time-in-ms-when-sync-empty: 0
+---
+spring:
+  profiles: peer2
+server:
+  port: 8762
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    serviceUrl:
+      defaultZone: http://peer1:8761/eureka/
+  server:
+    enable-self-preservation: false
+    wait-time-in-ms-when-sync-empty: 0
