--- a/bolg-web-admin/pom.xml
+++ b/bolg-web-admin/pom.xml
@@ -5,7 +5,7 @@
 
     <artifactId>bolg-web-admin</artifactId>
     <groupId>com.ym52n.bolg</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <modelVersion>4.0.0</modelVersion>
     
     <packaging>jar</packaging>
@@ -24,6 +24,7 @@
         <java.version>1.8</java.version>
         <fastjson.version>1.1.26</fastjson.version>
         <commons-lang3.version>3.3.1</commons-lang3.version>
+        <docker.image.prefix>zhangzexu</docker.image.prefix>
     </properties>
     <dependencies>
         <dependency>
@@ -96,8 +97,42 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <!--docker pull 插件-->
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>0.4.13</version>
+                <executions>
+                    <execution>
+                        <id>build-image</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>push</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <imageName>${docker.image.prefix}/${artifactId}:${version}</imageName>
+                    <baseImage>java</baseImage>
+                    <entryPoint>["java","-jar","/${project.build.finalName}.jar"]</entryPoint>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
+                    <serverId>docker-hub</serverId>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
         </plugins>
-        <finalName>bolg-web-ui</finalName>
+        <finalName>${artifactId}</finalName>
     </build>
 
 
